# ScaViSLAM

./: CMakeLists.txt  README  coding_style.xml
data/: newcollege.cfg  rgbd_example.cfg  rgbd_live.cfg
scavislam/: backend.cpp  backend.h  create_dictionary.cpp  data_structures.h  dense_tracking.h  draw_items.h  dump_rgbd.cpp  fast_grid.cpp  filegrabber.cpp  filegrabber.h  frame_grabber-impl.cpp  frame_grabber.cpp  frame_grabber.hpp  homography.h  keyframes.h  matcher.cpp  matcher.hpp  maths_utils.cpp  placerecognizer.cpp  placerecognizer.h  pose_optimizer.h  quadtree.h  ransac.cpp  ransac_models.cpp  ransac_models.h  rgbd_grabber.h  slam_graph-impl.cpp  slam_graph.cpp  slam_graph.hpp  stereo_camera.h  stereo_frontend.cpp  stereo_frontend.h  stereo_slam.cpp  transformations.h
scavislam/g2o_types/: anchored_points.cpp  anchored_points.h
src/: CMakeLists.txt  backend.cpp  backend.h  create_dictionary.cpp  data_structures.h  dense_tracking.cpp  dense_tracking.h  draw_items.h  fast_grid.h  frame_grabber-impl.cpp  frame_grabber.cpp  frame_grabber.hpp  global.h  homography.cpp  homography.h  matcher-impl.cpp  matcher.cpp  matcher.hpp  maths_utils.cpp  maths_utils.h  placerecognizer.cpp  placerecognizer.h  pose_optimizer.h  quadtree.h  ransac-impl.cpp  ransac.cpp  ransac.hpp  ransac_models.h  rgbd_grabber.cpp  slam_graph.cpp  slam_graph.hpp  stereo_camera.cpp  stereo_camera.h  stereo_frontend.cpp  stereo_frontend.h  stereo_slam.cpp  transformations.h
src/g2o_types/: anchored_points.cpp  anchored_points.h
src/gpu/: cuPrintf.cu  cuPrintf.cuh  dense_tracking.cu  dense_tracking.cuh
